--- a/app/src/main/res/layout/fragment_regis.xml
+++ b/app/src/main/res/layout/fragment_regis.xml
@@ -61,7 +61,7 @@
         android:padding="15dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/sugnBton"
+        android:id="@+id/signBton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
